--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                 <p class="Instagram label">Instagram</p>
             </div>
 
-            <div class="col-md-2 link-div" onclick="location.href='./contact.html';">
-                    <img src="./assets/pngegg.png" class="contact link"><img>
-                    <p class="contact label">Contact Me</p>
+            <div class="col-md-2 link-div" onclick="location.href='Scripts.html';">
+                    <img src="./assets/codelogo.png" class="contact link"><img>
+                    <p class="contact label">Useful Scripts</p>
             </div>
 
             <div class="col-md-2 link-div" onclick="location.href='https://www.linkedin.com/in/matthew-wilson-0589a911b';">
                 <img src="./assets/linkedin.png" class="github link"><img>
-                <p class="linkedin label">GitHub</p>
+                <p class="linkedin label">Linkedin</p>
              </div>
        
 
