--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
           rel="stylesheet"
         />
-        <link rel="apple-touch-icon" sizes="180x180" href="./assets/mwlogo.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/mwlogo.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./assets/mwlogo.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/newlogo2.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/newlogo2.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/newlogo2.png">
         <link rel="manifest" href="/site.webmanifest">
 
     </head>
