--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/mwilsonheadshot3.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/mwilsonheadshot (3).png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Summary</h2>
 										<p>Experienced IT Engineer adept in bringing forth expertise in support, automation, deployment, and various forms of server management. Equipped with a diverse and promising skill set. Proficient in various platforms, languages, and embedded systems. Experienced with the latest cutting-edge development tools and procedures. Able to effectively self-manage during independent projects, as well as collaborate as part of a productive team.</p>
