--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/mttwlsn</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; </li>
 							</ul>
 						</div>
 					</section>
