--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="#" class="image"><img src="images/nyc.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Experience</h2>
-										<p>Since starting my IT Career during college in 2016 at Agio, inc., I've worked with various Hedge Funds, Architecture firms and Art Galleries working on both the Infrastructure and day-to-day helpdesk tasks. From 2020 to the end of 2021, I worked at Schonfeld Strategic Advisors, LLC as a Corporate support engineer, but ultimately came back to Agio to refine my skills in Automation and Engineering.  </p>
+										<p>Since starting my IT Career while in college in 2016 at Agio, inc., I've worked with various Hedge Funds, Architecture firms and Art Galleries working on both the Infrastructure and day-to-day helpdesk tasks. From 2020 to the end of 2021, I worked at Schonfeld Strategic Advisors, LLC as a Corporate support engineer, but ultimately came back to Agio to refine my skills in Automation and Engineering.  </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -90,27 +90,27 @@
 									<p></p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/Windows-7-to-10-min-1200x675.png" alt="" /></a>
+											<h3 class="major">Windows 7 to 10 Migration</h3>
+											<p>Conducted two separate Windows Migrations for over 300 Employees with the use of Powershell Scripts to transfer data and personal files to new machines</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/Windows-7-to-10-min-1200x675.png" alt="" /></a>
+											<h3 class="major">Server Migration</h3>
+											<p>Helped migrate a file server for a high-level client while not interupting any day-to-day processes/configurations</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/printserver.jpg" alt="" /></a>
+											<h3 class="major">Print Server Setup</h3>
+											<p>Created and configured a virtual print server for 300+ Employee Organization</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/cloudmigration.png" alt="" /></a>
+											<h3 class="major">On-Prem to Cloud Migration</h3>
+											<p>Helped design and develop the Infrastructure to a new cloud environment for 200+ user firm</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
