--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Windows-7-to-10-min-1200x675.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/servermigration.png" alt="" /></a>
 											<h3 class="major">Server Migration</h3>
 											<p>Helped migrate a file server for a high-level client while not interupting any day-to-day processes/configurations</p>
 											<a href="#" class="special">Learn more</a>
