changed info and blog and added elements page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
+								<li><a href="generic.html">More Information</a></li>
 								<li><a href="Blog.html">Blog</a></li>
 								<li><a href="#"></a></li>
 							</ul>
