--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,13 @@
 
 				<!-- Wrapper -->
 					
-
+				<section id="wrapper">
+					<header>
+						<div class="inner">
+							<h2>Blog</h2>
+							<p>Insert Blog article here</p>
+						</div>
+					</header>
 									<section>
 										<h3 class="major">Image</h3>
 										<h4>Fit</h4>
@@ -78,7 +84,7 @@
 							<li class="icon solid fa-phone">(845) 803-6561</li>
 							<li class="icon solid fa-envelope"><a href="#">matthewdwilson0@gmail.com</a></li>
 						
-							<li class="icon brands fa-instagram"><a href="#">instagram.com/mttwlsn</a></li>
+							<li class="icon brands fa-instagram"><a href="https://instagram.com/mttwlsn">instagram.com/mttwlsn</a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; </li><li></li>
