--- a/generic.html
+++ b/generic.html
@@ -44,7 +44,7 @@
 						<header>
 							<div class="inner">
 								<h2>Information</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<p>This section is a work in progress</p>
 							</div>
 						</header>
 
