--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<li class="icon solid fa-envelope"><a href="#">matthewdwilson0@gmail.com</a></li>
 						
 							
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/mttwlsn</a></li>
+								<li class="icon brands fa-instagram"><a href="https://instagram.com/mttwlsn">mttwlsn</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; </li>
