edited some words in projects

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/Windows-7-to-10-min-1200x675.png" alt="" /></a>
 											<h3 class="major">Windows 7 to 10 Migration</h3>
-											<p>Conducted two separate Windows Migrations for over 300 Employees with the use of Powershell Scripts to transfer data and personal files to new machines</p>
+											<p>Conducted two separate Windows Migrations for two Major Financial firms with over 300 Employees with the use of Powershell Scripts to transfer data and personal files to new machines</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
