changed Blog to blog

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">More Information</a></li>
-								<li><a href="Blog.html">Blog</a></li>
+								<li><a href="blog.html">Blog</a></li>
 								<li><a href="#"></a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
