--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Matthew Wilson</h2>
-							<p>Experienced IT Engineer looking into a career in Web Development</p>
+							<p>Computer Engineer looking into a career in Web Development</p>
 						</div>
 					</section>
 
