--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 						
 							
 								<li class="icon brands fa-instagram"><a href="https://instagram.com/mttwlsn">mttwlsn</a></li>
+								<li class="icon brands fa-linkedin"> <a href="https://linkedin.com/in/mdwilson4">LinkedIn</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; </li>
