--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="#" class="image"><img src="images/nyc.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Experience</h2>
-										<p>Since starting my IT Career while in college in 2016 at Agio, inc., I've worked with various Hedge Funds, Architecture firms and Art Galleries working on both the Infrastructure and day-to-day helpdesk tasks. From 2020 to the end of 2021, I worked at Schonfeld Strategic Advisors, LLC as a Corporate support engineer, but ultimately came back to Agio to refine my skills in Automation and Engineering.  </p>
+										<p>Since starting my IT Career while in college in 2016 at Agio, inc., I've worked with various Hedge Funds, Architecture firms and Art Galleries working on both the backend Infrastructure and day-to-day helpdesk tasks. From 2020 to the end of 2021, I worked at Schonfeld Strategic Advisors, LLC as a Corporate support engineer, but ultimately came back to Agio to refine my skills in Automation and Engineering. Currently, I'm working as a support engineer for the New York Mets specializing in automation.  </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -92,7 +92,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/Windows-7-to-10-min-1200x675.png" alt="" /></a>
 											<h3 class="major">Windows 7 to 10 Migration</h3>
-											<p>Conducted two separate Windows Migrations for two Major Financial firms with over 300 Employees with the use of Powershell Scripts to transfer data and personal files to new machines</p>
+											<p>Conducted multiple Windows Migrations for Major Financial firms with over 300 Employees using Powershell Scripts to transfer data and personal files to new machines</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
