--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/nyc.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/battingpractices.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Experience</h2>
 										<p>Since starting my IT Career while in college in 2016 at Agio, inc., I've worked with various Hedge Funds, Architecture firms and Art Galleries working on both the backend Infrastructure and day-to-day helpdesk tasks. From 2020 to the end of 2021, I worked at Schonfeld Strategic Advisors, LLC as a Corporate support engineer, but ultimately came back to Agio to refine my skills in Automation and Engineering. Currently, I'm working as a support engineer for the New York Mets specializing in automation.  </p>
